...
                label: "Comfy"
            ) {
                values.musicPlayerStyle = .comfy
            } content: {
                comfyStyle
            }
            .accessibilityIdentifier("ComfyStyleButton")
            
            ComfyPickerElement(
                isSelected: values.musicPlayerStyle == .native,
                label: "Native"
            ) {
                values.musicPlayerStyle = .native
            } content: {
                nativeStyle
            }
            .accessibilityIdentifier("NativeStyleButton")
        }
    }
    
    private var comfyStyle: some View {
        HStack(alignment: .top) {
            
...
