...
            Spacer()
            
            ComfyButton(title: "Save", $musicValuesDidChange) {
                settings.saveMusicWidgetValues(values: musicWidgetValues)
                musicValuesDidChange = false
            }
            .accessibilityIdentifier("MusicPlayerSettingsSaveButton")
        }
    }
    
    private var cameraSettings: some View {
        ComfySettingsContainer {
            CameraSettings()
...
